--- a/SPMS/Areas/Supervisors/Views/Dashboard/Profile.cshtml
+++ b/SPMS/Areas/Supervisors/Views/Dashboard/Profile.cshtml
@@ -77,7 +77,8 @@
 												<div class="profile-about-me">
 													<div class="pt-4 border-bottom-1 pb-3">
 														<h4 class="text-primary">About Me</h4>
-														<p class="mb-2">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence was created for the bliss of souls like mine.I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
+														<p class="mb-2">@supervisor.Bio</p>
+
 													</div>
 												</div>
 												
@@ -189,6 +190,13 @@
 																			<input asp-for="@supervisor.File" name="File" type="file" class="form-file-input form-control">
 																		</div>
 																	</div>
+																</div>
+															</div>
+
+															<div class="row">
+																<div class="mb-3 col-md-6">
+																	<label class="form-label">Bio</label>
+																	<textarea asp-for="@supervisor.Bio" row="3" name="Bio" class="form-control" required></textarea>
 																</div>
 															</div>
 															
