--- a/SPMS/Areas/Supervisors/Views/Project/Proposal.cshtml
+++ b/SPMS/Areas/Supervisors/Views/Project/Proposal.cshtml
@@ -51,30 +51,7 @@
 													<td class="py-2">@item.DateSubmitted.ToShortDateString()</td>
 													<td class="py-2">@item.Topic</td>
 													<td>
-														<a asp-action="Details" asp-route-ProjectId="@item.ProjectId">View Proposal</a>
-
-														<div class="modal fade" id="bd-example-modal-lg_@item.ProjectId" tabindex="-1" role="dialog" aria-hidden="true">
-															<div class="modal-dialog modal-lg">
-																<div class="modal-content">
-																	<div class="modal-header">
-																		<h5 class="modal-title">Project Proposal</h5>
-																		<button type="button" class="btn-close" data-bs-dismiss="modal">
-																		</button>
-																	</div>
-																	<div class="modal-body">
-																		<p id="text">
-																			@*@_file.ReadPdfFile(@item.FileUrl)*@
-																		</p>
-																	</div>
-																	<div class="modal-footer">
-																		<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
-																		<button type="button" class="btn btn-primary">Approve</button>
-																		<button type="button" class="btn btn-primary">Reject</button>
-
-																	</div>
-																</div>
-															</div>
-														</div>
+														<a asp-action="details" asp-route-projectId="@item.ProjectId">View Proposal</a>
 													</td>
 													<td class="py-2 text-end">
 															<span class="badge badge-warning">@item.Status<span class="ms-1 fas fa-stream"></span></span>
@@ -82,8 +59,8 @@
 													
 													<td>
 														<div class="d-flex">
-															<a  asp-action="Status" asp-route-ProjectId="@item.ProjectId" asp-route-item="Approved" id="Approve" class="btn btn-primary shadow btn-xs sharp me-1"><i class="fas fa-check"></i></a>
-													<a asp-action="Status" asp-route-ProjectId="@item.ProjectId" asp-route-item="Rejected" id="Rejact" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-times"></i></a>
+															<a asp-action="status" asp-route-projectId="@item.ProjectId" asp-route-status="Approved" class="btn btn-primary shadow btn-xs sharp me-1"><i class="fas fa-check"></i></a>
+															<a asp-action="status" asp-route-projectId="@item.ProjectId" asp-route-status="Rejected" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-times"></i></a>
 														</div>
 													</td>
 												</tr>
@@ -97,24 +74,3 @@
 				</div>
 			</div>
 </div>
-
-
-
-
-
-<script type="text/javascript">
-	$(function () {
-		$('#readF').click(function () {
-			var url = '@Url.Content("~/")' + "CascadeHelp/readFile";
-			var ddlSource = $("#mylink").attr("href");
-			$.getJSON(url, { file: $(ddlSource).val() }, function (dat) {
-				$("#text").empty();
-				
-				$("#text").html(items);
-			});
-		});
-	});
-</script>
-
-
-
