--- a/SPMS/Areas/supervisors/Views/Project/Details.cshtml
+++ b/SPMS/Areas/supervisors/Views/Project/Details.cshtml
@@ -82,23 +82,23 @@
 								<div class="project-description">
 									<span class="fs-18 font-w500 mb-3 d-block">PROJECT ABSTRACT</span>
 									<p class="fs-18 font-w500">
-										<iframe seamless class="w-100" height="650" src="@prjt.FileUrl">
+										<iframe seamless class="w-100" height="750" src="@prjt.FileUrl">
 											<sspan>Your browser does not support iframes.</sspan>
 										</iframe>
 									</p>
 
 								</div>
-								<form asp-controller="project" asp-action="status" method="post">
+								@using (Html.BeginForm("remark", "project", new { projectId = @prjt.ProjectId }, FormMethod.Post))
+								{
 									<div class="message1">
 										<textarea class="form-control" id="rTextarea" asp-for="@project.Remark" name="Remark" rows="4" placeholder="Type comment here..."></textarea>
 										<div class="msg-button">
-											<i class="fas fa-smile me-3 "></i>
-											<i class="fas fa-paperclip me-3"></i>
 
-											@*<button type="submit" asp-route-ProjectId="@prjt.ProjectId"  asp-route-item="Approved" class="btn btn-primary">Approve</button>*@
+											<input type="submit" name="stat" value="Approved" class="btn btn-primary" /> &nbsp;&nbsp;
+											<input type="submit" name="stat" value="Rejected" class="btn btn-primary" />
 										</div>
 									</div>
-								</form>
+								}
 
 							</div>
 						</div>
