--- a/SPMS/Views/Account/ForgotPass.cshtml
+++ b/SPMS/Views/Account/ForgotPass.cshtml
@@ -19,7 +19,8 @@
 							<input type="email" asp-for="Email" name="Email" class="form-control" required placeholder="Enter Email" />
 						</div>
 						<div class="mt-3">
-							<button type="submit" class="btn btn-primary" >Submit</button>
+							<button type="submit" class="btn btn-primary">Submit</button> &nbsp;&nbsp;
+							<a asp-action="login" class="btn btn-info" >Back</a>
 						</div>
 					</form>
 				</div>
