--- a/SPMS/Areas/su/Views/Project/PStudent.cshtml
+++ b/SPMS/Areas/su/Views/Project/PStudent.cshtml
@@ -17,7 +17,7 @@
 				<span class="input-group-text"><a href="javascript:void(0)"><i class="flaticon-381-search-2"></i></a></span>
 			</div>
 			<div class="mb-4">
-				<a href="javascript:void(0);" class="btn btn-primary btn-rounded fs-18">+ New Contact</a>
+				@*<a href="javascript:void(0);" class="btn btn-primary btn-rounded fs-18">+ New Contact</a>*@
 			</div>
 		</div>
 		<div class="row">
