adding cvs upload and add

--- a/SPMS/Areas/ad/Views/Manage/Department.cshtml
+++ b/SPMS/Areas/ad/Views/Manage/Department.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-	ViewData["Title"] = "Deepartment";
+	ViewData["Title"] = "Department";
 	Department dpt = new Department();
 	var dpts = ViewData["Departments"] as IEnumerable<Department>; 
 }
