--- a/SPMS/Areas/ad/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/ad/Views/Shared/_Layout.cshtml
@@ -10,22 +10,24 @@
 	<meta name="author" content="" />
 	<meta name="robots" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Workload :Capstone Project Management System" />
-	<meta property="og:title" content="Workload : Capstone Project Management System" />
-	<meta property="og:description" content="CPMS : Capstone Project Management System" />
+	<meta name="description" content="SPMS :Student Project Management System" />
+	<meta property="og:title" content="SPMS : Student Project Management System" />
+	<meta property="og:description" content="SPMS : Student Project Management System" />
 	<meta property="og:image" content="" />
 	<meta name="format-detection" content="telephone=no">
 
 	<!-- PAGE TITLE HERE -->
-	<title>Capstone Project Management</title>
+	<title>Student Project Management System</title>
+
 
 	<!-- FAVICONS ICON -->
 	<link rel="shortcut icon" type="image/png" href="~/assets/images/favico.png" />
+	<!-- Datatable -->
+	<link href="~/assets/vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
+	<!-- Custom Stylesheet -->
 	<link href="~/assets/vendor/jquery-nice-select/css/nice-select.css" rel="stylesheet">
-	<link href="~/assets/vendor/owl-carousel/owl.carousel.css" rel="stylesheet">
-
-	<!-- Style css -->
 	<link href="~/assets/css/style.css" rel="stylesheet">
+
 
 </head>
 <body>
@@ -44,25 +46,16 @@
 		<Partial name="_Footer" />
 	</div>
 
-
-
-	<!-- Required vendors -->
 	<script src="~/assets/vendor/global/global.min.js"></script>
 	<script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>
-	<script src="~/assets/vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
-
 	<!-- Apex Chart -->
 	<script src="~/assets/vendor/apexchart/apexchart.js"></script>
+	
+	<!-- Datatable -->
+	<script src="~/assets/vendor/datatables/js/jquery.dataTables.min.js"></script>
+	<script src="~/assets/js/plugins-init/datatables.init.js"></script>
 
-	<script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>
-
-	<!-- Chart piety plugin files -->
-	<script src="~/assets/vendor/peity/jquery.peity.min.js"></script>
-	<!-- Dashboard 1 -->
-	<script src="~/assets/js/dashboard/dashboard-1.js"></script>
-
-	<script src="~/assets/vendor/owl-carousel/owl.carousel.js"></script>
-
+	<script src="vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
 	<script src="~/assets/js/custom.min.js"></script>
 	<script src="~/assets/js/dlabnav-init.js"></script>
 	<script src="~/assets/js/demo.js"></script>
