--- a/SPMS/Views/Shared/_Layout.cshtml
+++ b/SPMS/Views/Shared/_Layout.cshtml
@@ -7,11 +7,9 @@
 	<meta name="author" content="" />
 	<meta name="robots" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Workload :FPE Student Project Management System" />
-	<meta property="og:title" content="Workload : FPE Student Project Management System" />
-	<meta property="og:description" content="CPMS : FPE Student Project Management System" />
-	<meta property="og:image" content="" />
-	<meta name="format-detection" content="telephone=no">
+	<meta name="description" content="SPMS : FPE Student Project Management System" />
+	<meta property="og:title" content="SPMS : FPE Student Project Management System" />
+	<meta property="og:description" content="SPMS : FPE Student Project Management System" />
 	
 	<!-- PAGE TITLE HERE -->
 	<title>FPE Student Project Management</title>
