--- a/SPMS/Views/Shared/_NoticePartial.cshtml
+++ b/SPMS/Views/Shared/_NoticePartial.cshtml
@@ -19,12 +19,13 @@
 
 				</div>
 				<div class="modal-body">
-					<p> <b> Hello @CurrentUser.Surname 🤠, Kindly Compelete below to get started with your project. Goodluck ! 💪💪 </b></p>
+					<p> <b> Hello @CurrentUser.Surname, Kindly Compelete below to get started with your project. Goodluck ! 💪💪 </b></p>
 
 					<ol>
 						<li><b>*</b> Go to your profile</li>
 						<li><b>*</b> Update your profile email & phone no</li>
 						<li><b>*</b> Select your project Supervisor</li>
+						<li><b>*</b> Ensure all details provided are correct</li>
 						<li><b>*</b> Submit Update</li>
 					</ol>
 					<p>Then proceed to submit your project proposal</p>
