--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -19,14 +19,14 @@
 
 				<li>
 					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						<i class="fas fa-info-circle"></i>
+						<i class="fas fa-tasks"></i>
 						<span class="nav-text">Manage</span>
 					</a>
 					<ul aria-expanded="false">
-						<li><a asp-controller="dashboard" asp-action="department">Department</a></li>
-						<li><a asp-controller="dashboard" asp-action="adddepartment">Supervisors</a></li>
-						<li><a asp-controller="dashboard" asp-action="adddepartment">Students</a></li>
-
+						<li><a asp-controller="manage" asp-action="department">Department</a></li>
+						<li><a asp-controller="manage" asp-action="supervisor">Supervisors</a></li>
+						<li><a asp-controller="manage" asp-action="student">Students</a></li>
+						<li><a asp-controller="manage" asp-action="notification">notification</a></li>
 						<li>
 							<ul aria-expanded="false">
 							</ul>
