--- a/SPMS/Views/Shared/_PagesLayout.cshtml
+++ b/SPMS/Views/Shared/_PagesLayout.cshtml
@@ -8,10 +8,10 @@
     <meta name="author" content="" />
     <meta name="robots" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Capstone : Capstone Project Management   " />
-    <meta property="og:title" content="Capstone : Capstone Project Management   " />
-    <meta property="og:description" content="Capstone : Capstone Project Management   " />
-    <meta property="og:image" content="https:/workload.dexignlab.com/xhtml/social-image.png" />
+    <meta name="description" content="SPMS : Student Project Management   " />
+    <meta property="og:title" content="SPMS : Student Project Management   " />
+    <meta property="og:description" content="SPMS : Student Project Management   " />
+    @*<meta property="og:image" content="https:/workload.dexignlab.com/xhtml/social-image.png" />*@
     <meta name="format-detection" content="telephone=no">
 
     <!-- PAGE TITLE HERE -->
