--- a/SPMS/Areas/ad/Views/Manage/Student.cshtml
+++ b/SPMS/Areas/ad/Views/Manage/Student.cshtml
@@ -78,7 +78,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 			</div>
 			<div class="modal-body">
-				<form asp-action="uploadfile" method="get" enctype="multipart/form-data">
+				<form asp-action="uploadfile" method="post" enctype="multipart/form-data">
 
 					<div class="row">
 
