--- a/SPMS/Areas/ad/Views/Manage/Supervisor.cshtml
+++ b/SPMS/Areas/ad/Views/Manage/Supervisor.cshtml
@@ -22,7 +22,7 @@
 							<div class="card-header">
 								<h4 class="card-title">Profile Supervisors</h4>
 								<div>
-									<a asp-action="uploadfile" class="btn btn-primary mb-2">Upload Csv</a>
+									<a asp-action="index" class="btn btn-primary mb-2">Upload Csv</a>
 									<button type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#basicModal">Add</button>
 								</div>
 
@@ -77,7 +77,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 			</div>
 			<div class="modal-body">
-				<form asp-action="uploadfile" method="get" enctype="multipart/form-data">
+				<form asp-action="uploadfile" method="post" enctype="multipart/form-data">
 					
 					<div class="row">
 						
