--- a/SPMS/Areas/su/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/su/Views/Shared/_Layout.cshtml
@@ -10,14 +10,14 @@
 	<meta name="author" content="" />
 	<meta name="robots" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Workload :Capstone Project Management System" />
-	<meta property="og:title" content="Workload : Capstone Project Management System" />
-	<meta property="og:description" content="CPMS : Capstone Project Management System" />
+	<meta name="description" content="SPMS :Student Project Management System" />
+	<meta property="og:title" content="SPMS : Student Project Management System" />
+	<meta property="og:description" content="SPMS : Student Project Management System" />
 	<meta property="og:image" content="" />
 	<meta name="format-detection" content="telephone=no">
 
 	<!-- PAGE TITLE HERE -->
-	<title>Capstone Project Management</title>
+	<title>Student Project Management System</title>
 
 	<!-- FAVICONS ICON -->
 	<link rel="shortcut icon" type="image/png" href="~/assets/images/favico.png" />
