--- a/SPMS/Views/Shared/_Header.cshtml
+++ b/SPMS/Views/Shared/_Header.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="nav-header">
-	<a asp-controller="Home" asp-action="Index" class="brand-logo">
+	<a href="#" class="brand-logo">
 	
 		<img src="~/assets/images/logo.png" />
 		<div class="brand-title">
