--- a/SPMS/Areas/ad/Views/Manage/Create.cshtml
+++ b/SPMS/Areas/ad/Views/Manage/Create.cshtml
@@ -3,6 +3,7 @@
 
 @{
 	ViewData["Title"] = "Supervisors";
+	Supervisor sup = new Supervisor();
 }
 
 <Partial name="_DepartmentHeader" />
@@ -17,8 +18,9 @@
 				<li class="breadcrumb-item"><a href="javascript:void(0)">Datatable</a></li>
 			</ol>
 		</div>
-		<form asp-controller="manage" asp-action="index" method="post" enctype="multipart/form-data">
+		<form asp-controller="manage" asp-action="create" method="post" enctype="multipart/form-data">
 			<div class="col-lg-6">
+				 @ViewBag.Error
 				<label>Upload Csv file</label>
 				<div class="input-group mb-3">
 					<div class="form-file">
@@ -35,6 +37,8 @@
 			<div class="card">
 				<div class="card-header">
 					<h4 class="card-title">Profile Datatable</h4>
+					<a asp-action="addall" asp-route-save="save" class="btn btn-primary mb-2">Save All</a>
+
 				</div>
 				<div class="card-body">
 					<div class="table-responsive">
@@ -61,7 +65,6 @@
 										<td>@item.Email</td>
 									</tr>
 								}
-
 							</tbody>
 						</table>
 					</div>
