--- a/SPMS/Areas/ad/Views/Manage/Supervisor.cshtml
+++ b/SPMS/Areas/ad/Views/Manage/Supervisor.cshtml
@@ -22,7 +22,7 @@
 							<div class="card-header">
 								<h4 class="card-title">Profile Supervisors</h4>
 								<div>
-									<a asp-action="index" class="btn btn-primary mb-2">Upload Csv</a>
+									<a asp-action="create" class="btn btn-primary mb-2">Upload Csv</a>
 									<button type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#basicModal">Add</button>
 								</div>
 
@@ -32,23 +32,24 @@
 									<table id="example3" class="display" style="min-width: 845px">
 										<thead>
 											<tr>
-												<th></th>
 												<th>Name</th>
 												<th>Department</th>
-												<th>Staff ID</th>
-												<th>Mobile</th>
+												<th>File No</th>
+												<th>Mobile No</th>
 												<th>Email</th>
-												<th>Action</th>
+												<th></th>
 											</tr>
 										</thead>
 										<tbody>
 											@foreach (var item in lstusers)
 											{
 												<tr>
-													<td><img class="rounded-circle" width="35" src="@item.ImageUrl" alt=""></td>
 													<td>@item.FullName</td>
-													<td>@item.Department.Name</td>
-													<td>@item.EmployeeNo</td>
+													@if(item.Department!=null)
+													{
+														<td>@item.Department.Name</td>
+													}
+													<td>@item.FileNo</td>
 													<td><a href="javascript:void(0);"><strong>@item.PhoneNumber</strong></a></td>
 													<td><a href="javascript:void(0);"><strong>@item.Email</strong></a></td>
 													<td>
@@ -84,13 +85,13 @@
 						<div class="col-lg-12">
 							<div class="mb-3">
 								<label class="text-black font-w600 form-label">Upload Proposal <span class="required">*</span></label>
-								<input name="File" type="file" accept=".csv,.xlsx" placeholder="Topic" required class="form-file-input form-control">
+								<input name="File" type="text" placeholder="Topic" required class="form-file-input form-control">
 
 							</div>
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
-							<button type="submit" class="btn btn-primary">Upload</button>
+							<button type="submit" class="btn btn-primary">Submit</button>
 						</div>
 					</div>
 				</form>
