--- a/SPMS/Areas/st/Views/Dashboard/Profile.cshtml
+++ b/SPMS/Areas/st/Views/Dashboard/Profile.cshtml
@@ -166,12 +166,9 @@
 															<div class="row">
 																<div class="mb-3 col-md-6">
 																	<label class="form-label">Surname</label>
-															<input asp-for="@student.Surname" name="Surname" type="text"  class="form-control" required>
+															<input asp-for="@student.FullName" name="FullName" type="text"  class="form-control" required>
 																</div>
-																<div class="mb-3 col-md-6">
-																	<label class="form-label">Othernames</label>
-															<input asp-for="@student.OtherNames" name="OtherNames" id="Othername" type="text" class="form-control" required>
-																</div>
+																
 															</div>
 															<div class="row">
 																<div class="mb-3 col-md-6">
