--- a/SPMS/Views/Account/SignUp.cshtml
+++ b/SPMS/Views/Account/SignUp.cshtml
@@ -1,5 +1,4 @@
-﻿@model SignUpVM
-@{
+﻿@*@{
 	ViewData["Title"] = "SignUp Page";
 	Layout = "_PagesLayout";
 }
@@ -27,7 +26,7 @@
 										</div>
 										<div class="mb-3 col-md-6">
 											<label class="form-label">Staff No</label>
-											<input asp-for="EmployeeNo" name="EmployeeNo" type="text" class="form-control" required>
+											<input asp-for="FileNo" name="FileNo" type="text" class="form-control" required>
 										</div>
 										<div class="mb-3 col-md-6">
 											<label class="form-label">Department</label>
@@ -63,4 +62,4 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div>*@
