--- a/SPMS/Views/Shared/_MessageHeader.cshtml
+++ b/SPMS/Views/Shared/_MessageHeader.cshtml
@@ -69,7 +69,7 @@
 							<a class="nav-link" href="javascript:void(0);" role="button" data-bs-toggle="dropdown">
 								<img src="@CurrentUser.ImageUrl" width="20" alt="" />
 								<div class="header-info ms-3">
-									<span class="fs-18 font-w500 mb-2">@CurrentUser.Surname</span>
+									<span class="fs-18 font-w500 mb-2">@CurrentUser.FullName.Split(' ')[0]</span>
 									<small class="fs-12 font-w400">@CurrentUser.Email</small>
 								</div>
 							</a>
