--- a/SPMS/Views/Shared/_NoticePartial.cshtml
+++ b/SPMS/Views/Shared/_NoticePartial.cshtml
@@ -19,7 +19,7 @@
 
 				</div>
 				<div class="modal-body">
-					<p> <b> Hello @CurrentUser.Surname, Kindly Compelete below to get started with your project. Goodluck ! 💪💪 </b></p>
+					<p> <b> Hello @CurrentUser.FullName.Split(' ')[0], Kindly Compelete below to get started with your project. Goodluck ! 💪💪 </b></p>
 
 					<ol>
 						<li><b>*</b> Go to your profile</li>
