--- a/SPMS/Views/Shared/_NoticePartial.cshtml
+++ b/SPMS/Views/Shared/_NoticePartial.cshtml
@@ -1,4 +1,9 @@
-﻿<head>
+﻿@{
+	TimeSpan time = TimeSpan.FromSeconds(10);
+}
+
+
+<head>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script>
 		$(document).ready(function () {
