duplicate bug fixed

--- a/SPMS/Areas/ad/Views/Manage/Supervisor.cshtml
+++ b/SPMS/Areas/ad/Views/Manage/Supervisor.cshtml
@@ -17,6 +17,7 @@
 					</ol>
 				</div>
 				<!-- row -->
+				@ViewBag.Error
 					<div class="col-12">
 						<div class="card">
 							<div class="card-header">
