--- a/SPMS/Areas/Admin/Views/Manage/Supervisor.cshtml
+++ b/SPMS/Areas/Admin/Views/Manage/Supervisor.cshtml
@@ -24,7 +24,7 @@
 							<div class="card-header">
 								<h4 class="card-title">Profile Supervisors</h4>
 								<div>
-									<a asp-action="create" class="btn btn-primary mb-2">Upload Csv</a>
+									<a asp-controller="manage" asp-action="create" class="btn btn-primary mb-2">Upload Csv</a>
 									<button type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#basicModal">Add</button>
 								</div>
 
