--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -40,7 +40,7 @@
 						<span class="nav-text">Notification</span>
 					</a>
 					<ul aria-expanded="false">
-						<li><a asp-controller="project" asp-action="pstudent">Push Notification</a></li>
+						@*<li><a asp-controller="project" asp-action="pstudent">Push Notification</a></li>*@
 						<li>
 							<ul aria-expanded="false">
 							</ul>
