--- a/SPMS/Areas/Graduate/Views/Project/Milestone.cshtml
+++ b/SPMS/Areas/Graduate/Views/Project/Milestone.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
 	ViewData["Title"] = "Milestone";
-	var prjts = ViewData["projects"] as IEnumerable<Project>;
+	var prjt = ViewData["project"] as Project;
 	var chapters = ViewData["chapters"] as IEnumerable<Chapter>;
 	Chapter chap = new Chapter();
 }
@@ -24,13 +24,55 @@
 				<div class="card">
 					<div class="card-header">
 						<h4 class="card-title">Project Topic</h4>
-						@if (prjts.Any(c => c.Status.Equals("Approved")))
+						@if (prjt != null && prjt.Status.Equals("Approved"))
 						{
 							<button type="button" class="btn btn-primary mb-2" data-bs-toggle="modal" data-bs-target="#basicModal">Add Chapter</button>
+							<div class="modal fade" id="basicModal">
+								<div class="modal-dialog" role="document">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h5 class="modal-title">Add Project Chapter</h5>
+											<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+										</div>
+										<div class="modal-body">
+											<form asp-action="Addeditchapter" method="post" enctype="multipart/form-data">
+												<input asp-for="@chap.Status" name="Status" value="Pending" type="hidden" class="form-control">
+												<input asp-for="@chap.Matric" name="Matric" value="@prjt.Matric" type="hidden" class="form-control">
+												<input asp-for="@chap.Topic" name="Topic" value="@prjt.Topic" type="hidden" class="form-control">
+												<input asp-for="@chap.ProjectId" name="ProjectId" value="@prjt.ProjectId" type="hidden" class="form-control">
+												<input asp-for="@chap.SupervisorId" name="SupervisorId" value="@prjt.SupervisorId" type="hidden" class="form-control">
+
+												<div class="row">
+													<div class="col-lg-12">
+														<div class="mb-3">
+															<label class="text-black font-w600 form-label">Project Chapter <span class="required">*</span></label>
+															<select asp-for="@chap.ChapterName" name="Chapter" asp-items="Html.GetEnumSelectList<ChapterName>()" class="form-control default-select wide" required>
+																<option selected="selected" value="@chap.ChapterName">  </option>
+															</select>
+														</div>
+													</div>
+													<div class="col-lg-12">
+														<div class="mb-3">
+															<label class="text-black font-w600 form-label">Upload File <span class="required">*</span></label>
+															<input asp-for="@chap.File" name="File" type="file" accept=".txt, .docx, .doc, .docs,.pdf" required class="form-file-input form-control">
+
+														</div>
+													</div>
+													<div class="modal-footer">
+														<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
+														<button type="submit" class="btn btn-primary">Add</button>
+													</div>
+												</div>
+											</form>
+										</div>
+									</div>
+								</div>
+							</div>
+
 						}
 						else
 						{
-							<button type="button" class="btn btn-primary mb-2" disabled data-bs-toggle="modal"  data-bs-target="#basicModal">Add Chapter</button>
+							<button type="button" class="btn btn-primary mb-2" disabled data-bs-toggle="modal"  data-bs-target="#basicModal">Chapter</button>
 						}
 					</div>
 					<div class="card-body">
@@ -152,43 +194,5 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="basicModal">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<h5 class="modal-title">Add Project Chapter</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-			</div>
-			<div class="modal-body">
-				<form asp-action="AddEditChapter" method="post" enctype="multipart/form-data">
-					<input asp-for="@chap.Status" name="Status" value="Pending" type="hidden" class="form-control">
-					<input asp-for="@chap.Matric" name="Matric" value="@CurrentUser.UserName" type="hidden" class="form-control">
-
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="mb-3">
-								<label class="text-black font-w600 form-label">Project Chapter <span class="required">*</span></label>
-								<select asp-for="@chap.ChapterName" name="Chapter" asp-items="Html.GetEnumSelectList<ChapterName>()" class="form-control default-select wide" required>
-									<option selected="selected" value="@chap.ChapterName">  </option>
-								</select>
-							</div>
-						</div>
-						<div class="col-lg-12">
-							<div class="mb-3">
-								<label class="text-black font-w600 form-label">Upload File <span class="required">*</span></label>
-								<input asp-for="@chap.File" name="File" type="file" accept=".txt, .docx, .doc, .docs,.pdf" required class="form-file-input form-control">
-
-							</div>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-danger light" data-bs-dismiss="modal">Close</button>
-							<button type="submit" class="btn btn-primary">Add</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
 
 <Partial name="_NoticePartial" />
