--- a/SPMS/Areas/Graduate/Views/_ViewImports.cshtml
+++ b/SPMS/Areas/Graduate/Views/_ViewImports.cshtml
@@ -3,7 +3,7 @@
 @using CPMS.Helpers
 @using CPMS.Extension
 @using Domain.Entities
-
+@using Domain.Interfaces
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inherits CPMS.Helpers.BaseViewPage<TModel>
