--- a/SPMS/Areas/Staff/Views/Dashboard/account.cshtml
+++ b/SPMS/Areas/Staff/Views/Dashboard/account.cshtml
@@ -147,7 +147,7 @@
 															<div class="row">
 																<div class="mb-3 col-md-6">
 																	<label class="form-label">Surname</label>
-																	<input asp-for="@supervisor.FullName" name="Surname" type="text" required class="form-control">
+																	<input asp-for="@supervisor.FullName" name="FullName" type="text" required class="form-control">
 																</div>
 																<div class="mb-3 col-md-6">
 																	<label class="form-label">Email</label>
