--- a/SPMS/Areas/Staff/Views/Project/MileStone.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/MileStone.cshtml
@@ -1,9 +1,8 @@
-﻿@using Domain.Interfaces
-@inject IFileHelper _file;
+﻿@inject IFileHelper _file;
 
 @{
 	ViewData["Title"] = "Project Chapter";
-	var prjts = ViewData["chapters"] as IEnumerable<Project>;
+	var prjts = ViewData["chapters"] as IEnumerable<Chapter>;
 }
 
 <head>
@@ -43,32 +42,31 @@
 									</tr>
 								</thead>
 								<tbody id="orders">
-									@foreach (var item in prjts.OrderBy(x => x.Matric))
+									@if (prjts!=null)
 									{
-										<tr class="btn-reveal-trigger">
-											<td class="py-2">
-												<strong>@item.Matric</strong><br /><a href="">@item.Student.FullName</a>
-											</td>
-											<td class="py-2">@item.DateSubmitted.ToShortDateString()</td>
-											@foreach (var i in item.Chapters)
-											{
-												<td class="py-2">@i.ChapterName</td>
-												<td>
-													<a asp-action="details" asp-route-projectId="@i.ChapterId">Read Chapter</a>
+										@foreach (var item in prjts.OrderBy(x => x.Matric))
+										{
+											<tr class="btn-reveal-trigger">
+												<td class="py-2">
+													<strong>@item.Matric</strong><br /><a href="">@item.Project.Student.FullName</a>
 												</td>
-												<td class="py-2 text-end">
-													<span class="badge badge-warning">@i.Status<span class="ms-1 fas fa-stream"></span></span>
-												</td>
+												<td class="py-2">@item.DateSubmitted.ToShortDateString()</td>
+													<td class="py-2">@item.ChapterName</td>
+													<td>
+														<a asp-action="cdetails" asp-route-chapterId="@item.ChapterId">Read Chapter</a>
+													</td>
+													<td class="py-2 text-end">
+														<span class="badge badge-warning">@item.Status<span class="ms-1 fas fa-stream"></span></span>
+													</td>
 
-												<td>
-													<div class="d-flex">
-														<a asp-action="cstatus" asp-route-projectId="@i.ChapterId" asp-route-status="Approved" class="btn btn-primary shadow btn-xs sharp me-1"><i class="fas fa-check"></i></a>
-														<a asp-action="cstatus" asp-route-projectId="@i.ChapterId" asp-route-status="Rejected" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-times"></i></a>
-													</div>
-												</td>
-											}
-										</tr>
-
+													<td>
+														<div class="d-flex">
+														<a asp-action="cstatus" asp-route-projectId="@item.ChapterId" asp-route-status="Approved" class="btn btn-primary shadow btn-xs sharp me-1"><i class="fas fa-check"></i></a>
+														<a asp-action="cstatus" asp-route-projectId="@item.ChapterId" asp-route-status="Rejected" class="btn btn-danger shadow btn-xs sharp"><i class="fa fa-times"></i></a>
+														</div>
+													</td>
+											</tr>
+										}
 									}
 								</tbody>
 							</table>
