--- a/SPMS/Areas/Staff/Views/Project/PStudent.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/PStudent.cshtml
@@ -41,10 +41,7 @@
 								</div>
 								<div class="user-meta-info">
 									<ul>
-										@foreach (var i in item.Projects.Where(x=>x.Status.Equals("Approved")))
-										{
-											<li><a asp-action="details" asp-route-projectId="@i.ProjectId"><i class="fas fa-info-circle"></i></a>View Project Details</li>
-										}
+											<li><a asp-action="details" asp-route-studentId=""><i class="fas fa-info-circle"></i></a>View Project Details</li>
 											<li><a href="mailto:@item.Email"><i class="far fa-comment-alt" mailto></i></a>@item.Email</li>
 									</ul>
 								</div>
