--- a/SPMS/Areas/Staff/Views/Project/Proposal.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/Proposal.cshtml
@@ -51,7 +51,7 @@
 													<td class="py-2">@item.DateSubmitted.ToShortDateString()</td>
 													<td class="py-2">@item.Topic</td>
 													<td>
-														<a asp-action="details" asp-route-projectId="@item.ProjectId">View Proposal</a>
+														<a asp-action="details" asp-route-projectId="@item.ProjectId">Read Proposal</a>
 													</td>
 													<td class="py-2 text-end">
 															<span class="badge badge-warning">@item.Status<span class="ms-1 fas fa-stream"></span></span>
