--- a/SPMS/Areas/Graduate/Views/Project/Details.cshtml
+++ b/SPMS/Areas/Graduate/Views/Project/Details.cshtml
@@ -27,7 +27,7 @@
 												@if(prjt != null)
 												{
 													<h4 class="fs-32 font-w700">@prjt.Topic</h4>
-													@foreach (var item in @prjt.Student)
+													@foreach (var item in @prjt.Students)
 													{
 														<span class="mb-2 d-block">Created by @item.FullName </span>
 													}
