--- a/SPMS/Areas/Staff/Views/Project/CDetails.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/CDetails.cshtml
@@ -28,7 +28,7 @@
 											@if (prjt != null)
 											{
 												<h4 class="fs-32 font-w700">@prjt.Topic</h4>
-												@foreach (var item in @prjt.Project.Student)
+												@foreach (var item in @prjt.Project.Students)
 												{
 														<span class="mb-2 d-block">Created by @item.FullName </span>
 												}
