--- a/SPMS/Areas/Staff/Views/Project/MileStone.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/MileStone.cshtml
@@ -48,7 +48,7 @@
 										{
 											<tr class="btn-reveal-trigger">
 												<td class="py-2">
-													@foreach (var i in item.Project.Student)
+													@foreach (var i in item.Project.Students)
 													{
 														<strong>@i.MatricNo</strong><br /><a href="">@i.FullName</a>
 													}
