--- a/SPMS/Areas/Staff/Views/Project/Proposal.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/Proposal.cshtml
@@ -47,7 +47,7 @@
 											{
 												<tr class="btn-reveal-trigger">
 													<td class="py-2">
-														@foreach (var i in item.Student)
+														@foreach (var i in item.Students)
 														{
 															<strong>@i.MatricNo</strong><br /><a href="">@i.FullName</a>
 														}
