--- a/SPMS/Views/Shared/_Sidebar.cshtml
+++ b/SPMS/Views/Shared/_Sidebar.cshtml
@@ -172,8 +172,7 @@ else if (User.IsInRole("Student"))
 
 				<li>
 					<a class="has-arrow " href="javascript:void()" aria-expanded="false">
-						@*<i class="fas fa-user-check"></i>*@
-						<i class="fa-brands fa-rocketchat"></i>
+						<i class="far fa-comments"></i>
 						<span class="nav-text">Chat</span>
 					</a>
 					<ul aria-expanded="false">
