--- a/SPMS/Areas/Admin/Views/_ViewImports.cshtml
+++ b/SPMS/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,8 +1,8 @@
-﻿@using CPMS
-@using CPMS.Models
-@using CPMS.Helpers
-@using CPMS.Extension
+﻿@using SPMS
+@using SPMS.Models
+@using SPMS.Helpers
+@using SPMS.Extension
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@inherits CPMS.Helpers.BaseViewPage<TModel>
+@inherits SPMS.Helpers.BaseViewPage<TModel>
 
