--- a/SPMS/Areas/Graduate/Views/Chat/Index.cshtml
+++ b/SPMS/Areas/Graduate/Views/Chat/Index.cshtml
@@ -21,19 +21,12 @@
 											<a href="javascript:void(0);"><i class="fas fa-user-friends"></i></a>
 										</div>
 										<div class="ms-3">
-											<h4 class="fs-20 font-w700">Room</h4>
-											<span>We share about daily life as scientist in the world</span>
+											<h4 class="fs-20 font-w700">#Room</h4>
+											<span>@CurrentStudent.Supervisor.FullName Projct Students</span>
 										</div>
 									</div>
 									<div class="activity d-flex align-items-center pb-3">
-										<ul class="d-flex">
-											<li><a href="javascript:void(0);"><i class="fas fa-video"></i></a>
-											<li>
-											<li><a href="javascript:void(0);"><i class="fas fa-search"></i></a>
-											<li>
-											<li><a href="javascript:void(0);"><i class="fas fa-star text-orange"></i></a>
-											<li>
-										</ul>
+										
 										<div class="dropdown ms-2">
 											<div class="btn-link" data-bs-toggle="dropdown">
 												<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -58,7 +51,7 @@
 												<p class="mb-1">
 													<ul id="messagesList"></ul>
 												</p>
-												<span class="fs-12">Sunday, October 24th, 2020  at 4.30 AM</span>
+												<span class="fs-12">@DateTime.Now.ToUniversalTime()</span>
 											</div>
 										</div>
 
