--- a/SPMS/Areas/Graduate/Views/Project/CompleteProject.cshtml
+++ b/SPMS/Areas/Graduate/Views/Project/CompleteProject.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
 	ViewData["Title"] = "Complete Project";
-	Project pjt = new Project();
+	ProjectArchive cpjt = new ProjectArchive();
 
 }
 
@@ -9,13 +9,12 @@
 <Partial name="_ProjectDetailsHeader" />
 <Partial name="_Sidebar" />
 
-
 <div class="content-body">
 	<div class="container-fluid">
 		<div class="row page-titles">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item active"><a href="javascript:void(0)">Home</a></li>
-				<li class="breadcrumb-item"><a href="javascript:void(0)">Components</a></li>
+				<li class="breadcrumb-item"><a href="javascript:void(0)">Complete Project</a></li>
 			</ol>
 		</div>
 		<!-- row -->
@@ -23,10 +22,12 @@
 			<div class="col-xl-12 col-xxl-12">
 				<div class="card">
 					<div class="card-header">
-						<h4 class="card-title">Submit Complete Projct Material</h4>
+						<h4 class="card-title">Submit Completed Project</h4>
+						
 					</div>
 					<div class="card-body">
 						<div id="smartwizard" class="form-wizard order-create">
+							<span class="text-danger">@TempData["Error"]</span>
 							<ul class="nav nav-wizard">
 								<li>
 									<a class="nav-link" href="#wizard_Service">
@@ -38,211 +39,82 @@
 										<span>2</span>
 									</a>
 								</li>
-								<li>
-									<a class="nav-link" href="#wizard_Details">
-										<span>3</span>
-									</a>
-								</li>
 							</ul>
-							<div class="tab-content">
-								<div id="wizard_Service" class="tab-pane" role="tabpanel">
-									<div class="row">
-										<div class="col-lg-6 mb-2">
-											<div class="mb-3">
-												<label class="text-label form-label">First Name*</label>
-												<input type="text" name="firstName" class="form-control" placeholder="Parsley" required>
+							<form asp-controller="project" asp-action="projectcomp" method="post" enctype="multipart/form-data">
+								<div class="tab-content">
+									<div id="wizard_Service" class="tab-pane" role="tabpanel">
+										<div class="row">
+											<div class="col-lg-6 mb-2">
+												<div class="mb-3">
+													<label class="text-label form-label">Project Code*</label>
+													<input asp-for="@cpjt.ProjectCode" name="ProjectCode" type="text" value="@CurrentStudent.MatricNo.Substring(0,6)" class="form-control" readonly required>
+												</div>
 											</div>
-										</div>
-										<div class="col-lg-6 mb-2">
-											<div class="mb-3">
-												<label class="text-label form-label">Last Name*</label>
-												<input type="text" name="lastName" class="form-control" placeholder="Montana" required>
-											</div>
-										</div>
-										<div class="col-lg-6 mb-2">
-											<div class="mb-3">
-												<label class="text-label form-label">Email Address*</label>
-												<input type="email" class="form-control" id="inputGroupPrepend2" aria-describedby="inputGroupPrepend2" placeholder="example@example.com.com" required>
-											</div>
-										</div>
-										<div class="col-lg-6 mb-2">
-											<div class="mb-3">
-												<label class="text-label form-label">Phone Number*</label>
-												<input type="text" name="phoneNumber" class="form-control" placeholder="(+1)408-657-9007" required>
-											</div>
-										</div>
-										<div class="col-lg-12 mb-3">
-											<div class="mb-3">
-												<label class="text-label form-label">Where are you from*</label>
-												<input type="text" name="place" class="form-control" required>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div id="wizard_Time" class="tab-pane" role="tabpanel">
-									<div class="row">
-										<div class="col-lg-6 mb-2">
-											<div class="mb-3">
-												<label class="text-label form-label">Company Name*</label>
-												<input type="text" name="firstName" class="form-control" placeholder="Cellophane Square" required>
-											</div>
-										</div>
-										<div class="col-lg-6 mb-2">
-											<div class="mb-3">
-												<label class="text-label form-label">Company Email Address*</label>
-												<input type="email" class="form-control" id="emial1" placeholder="example@example.com.com" required>
-											</div>
-										</div>
-										<div class="col-lg-6 mb-2">
-											<div class="mb-3">
-												<label class="text-label form-label">Company Phone Number*</label>
-												<input type="text" name="phoneNumber" class="form-control" placeholder="(+1)408-657-9007" required>
-											</div>
-										</div>
-										<div class="col-lg-6 mb-2">
-											<div class="mb-3">
-												<label class="text-label form-label">Your position in Company*</label>
-												<input type="text" name="place" class="form-control" required>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div id="wizard_Details" class="tab-pane" role="tabpanel">
-									<div class="row">
-										<div class="col-sm-4 mb-2">
-											<h4>Monday *</h4>
-										</div>
-										<div class="col-6 col-sm-4 mb-2">
-											<div class="mb-3">
-												<input class="form-control" value="9.00" type="number" name="input1" id="input1">
-											</div>
-										</div>
-										<div class="col-6 col-sm-4 mb-2">
-											<div class="mb-3">
-												<input class="form-control" value="6.00" type="number" name="input2" id="input2">
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-4 mb-2">
-											<h4>Tuesday *</h4>
-										</div>
-										<div class="col-6 col-sm-4 mb-2">
-											<div class="mb-3">
-												<input class="form-control" value="9.00" type="number" name="input3" id="input3">
-											</div>
-										</div>
-										<div class="col-6 col-sm-4 mb-2">
-											<div class="mb-3">
-												<input class="form-control" value="6.00" type="number" name="input4" id="input4">
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-4 mb-2">
-											<h4>Wednesday *</h4>
-										</div>
-										<div class="col-6 col-sm-4 mb-2">
-											<div class="mb-3">
-												<input class="form-control" value="9.00" type="number" name="input5" id="input5">
-											</div>
-										</div>
-										<div class="col-6 col-sm-4 mb-2">
-											<div class="mb-3">
-												<input class="form-control" value="6.00" type="number" name="input6" id="input6">
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-4 mb-2">
-											<h4>Thrusday *</h4>
-										</div>
-										<div class="col-6 col-sm-4 mb-2">
-											<div class="mb-3">
-												<input class="form-control" value="9.00" type="number" name="input7" id="input7">
-											</div>
-										</div>
-										<div class="col-6 col-sm-4 mb-2">
-											<div class="mb-3">
-												<input class="form-control" value="6.00" type="number" name="input8" id="input8">
-											</div>
-										</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-4 mb-2">
-											<h4>Friday *</h4>
-										</div>
-										<div class="col-6 col-sm-4 mb-2">
-											<div class="mb-3">
-												<input class="form-control" value="9.00" type="number" name="input9" id="input9">
-											</div>
-										</div>
-										<div class="col-6 col-sm-4 mb-2">
-											<div class="mb-3">
-												<input class="form-control" value="6.00" type="number" name="input10" id="input10">
-											</div>
-										</div>
-									</div>
-								</div>
-								<div id="wizard_Payment" class="tab-pane" role="tabpanel">
-									<div class="row emial-setup">
-										<div class="col-lg-3 col-sm-6 col-6">
-											<div class="mb-3">
-												<label for="mailclient11" class="mailclinet mailclinet-gmail">
-													<input type="radio" name="emailclient" id="mailclient11">
-													<span class="mail-icon">
-														<i class="mdi mdi-google-plus" aria-hidden="true"></i>
-													</span>
-													<span class="mail-text">I'm using Gmail</span>
-												</label>
-											</div>
-										</div>
-										<div class="col-lg-3 col-sm-6 col-6">
-											<div class="mb-3">
-												<label for="mailclient12" class="mailclinet mailclinet-office">
-													<input type="radio" name="emailclient" id="mailclient12">
-													<span class="mail-icon">
-														<i class="mdi mdi-office" aria-hidden="true"></i>
-													</span>
-													<span class="mail-text">I'm using Office</span>
-												</label>
-											</div>
-										</div>
-										<div class="col-lg-3 col-sm-6 col-6">
-											<div class="mb-3">
-												<label for="mailclient13" class="mailclinet mailclinet-drive">
-													<input type="radio" name="emailclient" id="mailclient13">
-													<span class="mail-icon">
-														<i class="mdi mdi-google-drive" aria-hidden="true"></i>
-													</span>
-													<span class="mail-text">I'm using Drive</span>
-												</label>
-											</div>
-										</div>
-										<div class="col-lg-3 col-sm-6 col-6">
-											<div class="mb-3">
-												<label for="mailclient14" class="mailclinet mailclinet-another">
-													<input type="radio" name="emailclient" id="mailclient14">
-													<span class="mail-icon">
-														<i class="fa fa-question-circle-o"
-														   aria-hidden="true"></i>
-													</span>
-													<span class="mail-text">Another Service</span>
-												</label>
-											</div>
-										</div>
-									</div>
+											<div class="col-lg-6 mb-2">
+												<div class="mb-3">
+													<label class="text-label form-label">Department*</label>
+													<select asp-for="@cpjt.DepartmentId" name="DepartmentId" class="form-control wide" id="departmentId" asp-items="@(new	SelectList(ViewBag.Departments,"DepartmentId","Name"))" required>
 
-									<div class="row">
-										<div class="col-12">
-											<div class="skip-email text-center">
-												<p>Or if want skip this step entirely and setup it later</p>
-												<a href="javascript:void(0)">Skip step</a>
+														<option value""> Select Department </option>
+
+													</select>
+												</div>
+											</div>
+											<div class="col-lg-6 mb-2">
+												<label class="text-label form-label">Author(s)*</label>
+												<select asp-for="@cpjt.Students" class="multi-select" name="Students" multiple="multiple" id="studentId" asp-items="@(new SelectList(ViewBag.Students,"StudentId","NameMatric"))" required>
+													@if (ViewBag.Students != null)
+													{
+														<option value""> Select Author(s) </option>
+													}
+												</select>
+											</div>
+											<div class="col-lg-6 mb-2">
+												<div class="mb-3">
+													<label class="text-label form-label">Supervisors*</label>
+													<select asp-for="@cpjt.SupervisorId" name="SupervisorId" class="form-control wide" id="departmentId" asp-items="@(new	SelectList(ViewBag.Supervisors,"SupervisorId","FullName"))" required>
+
+														<option value""> Select Supervisor </option>
+													</select>
+												</div>
 											</div>
 										</div>
 									</div>
+									<div id="wizard_Time" class="tab-pane" role="tabpanel">
+										<div class="row">
+											<div class="col-lg-6 mb-2">
+												<div class="mb-3">
+													<label class="text-label form-label">Project Title*</label>
+													<input asp-for="@cpjt.Title" name="Title" type="text" class="form-control" required>
+												</div>
+											</div>
+											<div class="col-lg-6 mb-2">
+												<div class="mb-3">
+													<label class="text-label form-label">A Case Study Of*</label>
+													<input asp-for="@cpjt.CaseStudy" name="CaseStudy" type="text" class="form-control" id="emial1" required>
+												</div>
+											</div>
+											<div class="col-lg-6 mb-2">
+												<div class="mb-3">
+													<label class="text-label form-label">Year of Project*</label>
+													<input asp-for="@cpjt.Year" name="Year" class="datepicker-default form-control" id="datepicker">
+												</div>
+											</div>
+											<div class="col-lg-6 mb-2">
+												<div class="mb-3">
+													<label class="text-label form-label">Upload Project Material*</label>
+														<input asp-for="@cpjt.File" name="File" type="file" accept=".doc,.docx, .docs, .pdf" required class="form-file-input form-control">
+
+												</div>
+											</div>
+									
+										</div>
+									</div>
 								</div>
-							</div>
+								<div style="text-align: left;">
+									<button class="btn btn-primary" type="submit">Submit</button>
+								</div>
+							</form>
 						</div>
 					</div>
 				</div>
