--- a/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
+++ b/SPMS/Areas/Graduate/Views/Shared/_Layout.cshtml
@@ -22,8 +22,15 @@
 	<link href="~/assets/vendor/owl-carousel/owl.carousel.css" rel="stylesheet">
 	<link rel="stylesheet" href="~/assets/vendor/select2/css/select2.min.css">
 
+	<!-- Form step -->
+	<link href="~/assets/vendor/jquery-smartwizard/dist/css/smart_wizard.min.css" rel="stylesheet">
 	<!-- Style css -->
 	<link href="~/assets/css/style.css" rel="stylesheet">
+
+	<!-- Pick date -->
+	<link rel="stylesheet" href="~/assets/vendor/pickadate/themes/default.css">
+	<link rel="stylesheet" href="~/assets/vendor/pickadate/themes/default.date.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 <body>
@@ -48,24 +55,52 @@
 	<script src="~/assets/vendor/global/global.min.js"></script>
 	<script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>
 	<script src="~/assets/vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
+	<script src="~/assets/vendor/jquery-steps/build/jquery.steps.min.js"></script>
 	<script src="~/assets/vendor/select2/js/select2.full.min.js"></script>
 	<script src="~/assets/js/plugins-init/select2-init.js"></script>
+	<script src=".~/assets/vendor/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 
-	<!-- Apex Chart -->
-	<script src="~/assets/vendor/apexchart/apexchart.js"></script>
+@*	<!-- Apex Chart -->
+	<script src="~/assets/vendor/apexchart/apexchart.js"></script>*@
 
 	<script src="~/assets/vendor/chart.js/Chart.bundle.min.js"></script>
 
 	<!-- Chart piety plugin files -->
 	<script src="~/assets/vendor/peity/jquery.peity.min.js"></script>
+	<!-- Form Steps -->
+	<script src="~/assets/vendor/jquery-smartwizard/dist/js/jquery.smartWizard.js"></script>
+	@*<script src="~/assets/vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>*@
+
 	<!-- Dashboard 1 -->
 	<script src="~/assets/js/dashboard/dashboard-1.js"></script>
-
 	<script src="~/assets/vendor/owl-carousel/owl.carousel.js"></script>
+	<script src="~/assets/vendor/pickadate/picker.js"></script>
+	<script src="~/assets/vendor/pickadate/picker.time.js"></script>
+	<script src="~/assets/vendor/pickadate/picker.date.js"></script>
+	<script src="~/assets/js/plugins-init/pickadate-init.js"></script>
 
 	<script src="~/assets/js/custom.min.js"></script>
 	<script src="~/assets/js/dlabnav-init.js"></script>
 	<script src="~/assets/js/demo.js"></script>
+	@*<script src="~/assets/js/styleSwitcher.js"></script>*@
+
+	<script>
+		$(document).ready(function () {
+			// SmartWizard initialize
+			$('#smartwizard').smartWizard();
+		});
+	</script>
+
+	 <script>
+	// Check that service workers are supported
+	if ('serviceWorker' in navigator) {
+		// Use the window load event to keep the page load performant
+		window.addEventListener('load', () => {
+				navigator.serviceWorker.register('/js/sw.js');
+		});
+	}
+	</script>
+
 	@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
