--- a/SPMS/Areas/Graduate/Views/_ViewImports.cshtml
+++ b/SPMS/Areas/Graduate/Views/_ViewImports.cshtml
@@ -1,10 +1,10 @@
-﻿@using CPMS
-@using CPMS.Models
-@using CPMS.Helpers
-@using CPMS.Extension
+﻿@using SPMS
+@using SPMS.Models
+@using SPMS.Helpers
+@using SPMS.Extension
 @using Domain.Entities
 @using Domain.Interfaces
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@inherits CPMS.Helpers.BaseViewPage<TModel>
+@inherits SPMS.Helpers.BaseViewPage<TModel>
 
