--- a/SPMS/Areas/Staff/Views/Project/Details.cshtml
+++ b/SPMS/Areas/Staff/Views/Project/Details.cshtml
@@ -29,7 +29,7 @@
 											{
 												<h4 class="fs-32 font-w700">@prjt.Topic</h4>
 												<span class="mb-2 d-block">Created by
-													@foreach (var item in @prjt.Student)
+													@foreach (var item in @prjt.Students)
 													{
 														@item.MatricNo <i> - </i>  @item.MatricNo
 													}
