--- a/SPMS/Views/Shared/_Layout.cshtml
+++ b/SPMS/Views/Shared/_Layout.cshtml
@@ -36,7 +36,6 @@
         <Partial name="_Header" />
 
         @RenderBody()
-        <partial name="_CookieConsentPartial" />
         <Partial name="_Footer" />
     </div>
 
@@ -62,6 +61,15 @@
     <script src="~/assets/js/custom.min.js"></script>
     <script src="~/assets/js/dlabnav-init.js"></script>
     <script src="~/assets/js/demo.js"></script>
+     <script>
+    // Check that service workers are supported
+    if ('serviceWorker' in navigator) {
+        // Use the window load event to keep the page load performant
+        window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/js/sw.js');
+        });
+    }
+    </script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
